<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/cl_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_2dbd9b"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <TextView
            android:id="@+id/tv_label_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:gravity="center"
            android:text="@string/txt_danjia"
            android:textColor="@color/color_txt_c"
            android:textSize="@dimen/text_size_36" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_top_unit_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:text="0"
                    android:textColor="@color/color_txt_c"
                    android:textSize="@dimen/text_size_48"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_top_unit_price_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="@dimen/size_35"
                    android:text=".00"
                    android:textColor="@color/color_txt_c"
                    android:textSize="@dimen/text_size_48"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/salePriceDesc"
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/size_12"
                android:gravity="center_vertical|end"
                android:text="@string/danjia_unit"
                android:textColor="@color/color_txt_label"
                android:textSize="@dimen/text_size_30" />

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/cl_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_2dbd9b"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <TextView
            android:id="@+id/tv_label_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:gravity="center"
            android:text="@string/txt_zhongliang"
            android:textColor="@color/color_txt_c"
            android:textSize="@dimen/text_size_36" />

        <FrameLayout
            android:id="@+id/block_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_top_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:text="0"
                    android:textColor="@color/color_txt_c"
                    android:textSize="@dimen/text_size_48"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_top_amount_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=".00"
                    android:textColor="@color/color_txt_c"
                    android:textSize="@dimen/text_size_48"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/weightDesc"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/size_12"
                android:gravity="center_vertical|end"
                android:text="@string/kilo_unit"
                android:textColor="@color/color_txt_label"
                android:textSize="@dimen/text_size_36" />

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/sum_ll"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorOrange"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <TextView
            android:id="@+id/tv_label_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jiesuanjiage"
            android:textColor="@color/color_txt_c"
            android:textSize="@dimen/text_size_36" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="@dimen/size_30"
                    android:text="0"
                    android:textColor="@color/color_txt_c"
                    android:textSize="64sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_price_sum_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_10"
                    android:minWidth="@dimen/size_30"
                    android:text=".00"
                    android:textColor="@color/color_txt_c"
                    android:textSize="64sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/priceDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/price_unit"
                android:layout_gravity="center_vertical|right"
                android:textColor="@color/color_txt_label"
                android:textSize="@dimen/text_size_36"
                android:textStyle="bold" />
        </FrameLayout>



    </LinearLayout>

</LinearLayout>